--- a/AndroidSpringboot/app/src/main/res/menu/menu_main.xml
+++ b/AndroidSpringboot/app/src/main/res/menu/menu_main.xml
@@ -9,8 +9,23 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="100"
+        android:title="Delete User"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_update"
+        android:orderInCategory="100"
+        android:title="Update User"
+        app:showAsAction="never" />
+
+
+    <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        android:title="Refresh"
+        android:title="Refresh Page"
         app:showAsAction="never" />
+
+
 </menu>
